--- a/hotel_managemet_client/src/components/staff.css
+++ b/hotel_managemet_client/src/components/staff.css
@@ -1,3 +1,12 @@
 .staff{
     padding: 120px 0;
+    font-family: 'Open Sans', serif;
+    text-rendering: optimizeLegibility !important;
+    color: #777;
+    font-weight: 400;
+}
+.team-img{
+    display: inline-block;
+    position: relative;
+    max-width: 550px;
 }
