--- a/hotel_managemet_client/src/components/about.css
+++ b/hotel_managemet_client/src/components/about.css
@@ -21,7 +21,7 @@
     padding-bottom: 20px;
 }
 
-h2::after{
+.about h2::after{
     position: absolute;
     content: "";
     background: #d43031;
