--- a/hotel_managemet_client/src/components/footer.css
+++ b/hotel_managemet_client/src/components/footer.css
@@ -2,6 +2,8 @@
     margin-top: 40px;
     background: #262626;
     padding: 40px 0 20px 0;
+width: 100%;
+
 }
 
 p {
@@ -12,16 +14,24 @@ p {
 .social {
     margin-top: -5px;
     text-align: right;
+
 }
 
 ul {
 
     padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    align-content: flex-start;
 }
 
 .social ul li {
 
     display: inline-block;
     margin: 0 15px;
+
 
 }
