--- a/hotel_managemet_client/src/components/contact.css
+++ b/hotel_managemet_client/src/components/contact.css
@@ -6,3 +6,14 @@
     justify-content: center;
     align-content: flex-start;
 }
+.reserve h3::after {
+
+    position: absolute;
+    content: "";
+    background: #d43031;
+    height: 2px;
+    width: 70px;
+    bottom: 0;
+    left: 10%;
+
+}
