--- a/hotel_managemet_client/src/components/footer.css
+++ b/hotel_managemet_client/src/components/footer.css
@@ -2,7 +2,7 @@
     margin-top: 40px;
     background: #262626;
     padding: 40px 0 20px 0;
-width: 100%;
+    width: 100%;
 
 }
 
@@ -12,8 +12,9 @@ p {
 }
 
 .social {
-    margin-top: -5px;
     text-align: right;
+    margin-top: 50px;
+    margin-right: -250px;
 
 }
 
@@ -26,12 +27,11 @@ ul {
     align-items: center;
     justify-content: center;
     align-content: flex-start;
+    overflow: visible;
 }
 
 .social ul li {
 
     display: inline-block;
-    margin: 0 15px;
-
 
 }
