--- a/hotel_managemet_client/src/components/signIn.css
+++ b/hotel_managemet_client/src/components/signIn.css
@@ -11,6 +11,12 @@
     color: white;
     background-color:#003580;
     padding: 70px 30px 30px;
+    box-shadow:7px 7px 60px #000;
+}
+
+
+.login-form::before{
+    background: #003580;
 
 }
 
@@ -49,3 +55,4 @@ svg .FaUserCircle{
 hr{
     background-color: #f6f6f6;
 }
+
