--- a/hotel_managemet_client/src/components/main.css
+++ b/hotel_managemet_client/src/components/main.css
@@ -21,7 +21,12 @@
     margin-top: 100px;
 
 }
->.signing{
-    position: relative;
+.signing{
+    position:absolute;
+    top:0;
+    left:0;
+    right:0;
+    float:left;
+  margin-top: -500px;
 
 }
