--- a/hotel_managemet_client/src/components/main.css
+++ b/hotel_managemet_client/src/components/main.css
@@ -24,9 +24,8 @@
 .signing{
     position:absolute;
     top:0;
-    left:0;
+    left:50px;
     right:0;
     float:left;
-  margin-top: -500px;
 
 }
